<resources>
    <string name="app_name">AppDevAssessment</string>
    <string name="report_bridge">Report Bridge</string>
    <string name="current_gps">Current GPS Location</string>
    <string name="saved_bridge_report_text">Saved Bridge Reports</string>
    <string name="edit_bridge_report_text">Edit Bridge Reports</string>
    <string name="single_bridge_report_text">Single Bridge Report</string>
    <string name="pick_date">Pick Date</string>
    <string name="spinner_title">Bridge Condition</string>
    <string-array name="bridge_conditions">
        <item>Good</item>
        <item>Moderate</item>
        <item>Poor</item>
    </string-array>
    <string name="id_text">ID:</string>
    <string name="lat_text">Latitude:</string>
    <string name="lon_text">Longitude:</string>
    <string name="date_text">Date:</string>
    <string name="condition_text">Condition:</string>
    <string name="delete_record_button_text">Delete Record</string>
    <string name="delete_all_records_text">Delete All Records</string>
    <string name="edit_record_button">Edit Record</string>
    <string name="edit_title">Update Bridge:</string>
</resources>
