<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml is the layout file for the main page -->

<!-- Sets the layout of the page -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

    <!-- Adds an image to the page -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <!-- Adds a space to the page -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Adds text to the page -->
    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_gps"
        android:textSize="20sp" />

    <!-- Adds a space to the page -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Adds a button to the page -->
    <Button
        android:id="@+id/report_bridge_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_bridge"
        app:iconPadding="10dp" />

    <!-- Adds a button to the page -->
    <Button
        android:id="@+id/saved_bridge_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_bridge_report_text" />

</LinearLayout>
