<?xml version="1.0" encoding="utf-8"?>
<!-- activity_report_bridge.xml is the layout file for the report page -->

<!-- Sets the layout of the page -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ReportBridgeActivity">

  <!-- Adds an image to the page -->
  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      app:srcCompat="@drawable/logo"
      tools:ignore="ContentDescription" />

  <!-- Adds a space to the page -->
  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp" />

  <!-- Adds text to the page -->
  <TextView
      android:id="@+id/location2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/current_gps"
      android:textSize="20sp" />

  <!-- Adds text to the page -->
  <EditText
      android:id="@+id/latitude_var"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="0"
      android:enabled="false"
      android:textColor="#000000"
      tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields" />

  <!-- Adds text to the page -->
  <EditText
      android:id="@+id/longitude_var"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="0"
      android:enabled="false"
      android:textColor="#000000"
      tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields" />

  <!-- Adds a space to the page -->
  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp" />

  <!-- Sets the layout for the section of the page -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <!-- Adds text to the page -->
    <EditText
        android:id="@+id/selected_date_text"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:minHeight="48dp"
        android:textColor="#000000"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />

    <!-- Adds a button to the page -->
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onCLick_setDate"
        android:text="@string/pick_date"
        tools:ignore="TouchTargetSizeCheck" />

  </LinearLayout>

  <!-- Adds a spinner to the page -->
  <Spinner
      android:id="@+id/condition_spinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:prompt="@string/spinner_title"
      android:entries="@array/bridge_conditions" />

  <!-- Adds a button to the page -->
  <Button
      android:id="@+id/report_bridge_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/report_bridge"
      app:iconPadding="10dp" />

</LinearLayout>
